# qalendar-api-rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DOCUMENTATION.md  Dockerfile  README.md  dockerfile
.sqlx/: query-00138290c876b2c62bc3cff93befb1b7cd7e3f22df67a83fd0d7c2ad3eae7bc1.json  query-027dd900dbb370d2c1de2b3fd579f38a34afb6cd0ad4b6f8a908072465e6ace1.json  query-030649f1218df4b82357b1a3cad3b91525f14d63fc6eff8663297639bbe8f65a.json  query-030b14c09a813c610641dca3b4ef6b62832580d817553f544016b7121f965bf3.json  query-05766cbc444138c2d63d2c651a7f5fac5952f683a0fc46e50c235076b707852c.json  query-058595681ced1eba1904d25f8edd3622ae040140fc26b1ec19613f9a8845882d.json  query-0889f339fe9994be06ea7e11599208487cbefa572f01d8807b948d9fb979fb53.json  query-08d1e4b9923e63bcce86fe8269b009ebbf8f4a4d1d04ee559a2eee923451a1b0.json  query-0c6f5479cfd888f17bb5e43a877c254c89c0b34ca5e75a0c13184c36fddedd57.json  query-0e3969861028e03c7b352466d2fd83c070999e436f86b2e3c9fd4b2fffe843f5.json  query-11fd49b8738e7d4197b11290db1d80aca5768348b9d697cbb6d8a50a1bec97c7.json  query-13753071c32445616243e64e92c5ccd6f8ee90d80c17fce524856cf251fabb2c.json  query-154d6f9af23879effa56ce7cc204fbc1c6e3c5977d7d516fa5f0eef1e4e7ddb8.json  query-1647bb4ad1bc85ae5ecbff61bf817eabc5e521788a37f3e5c126c8d4cc498cd1.json  query-1669efa5be76712b55bb0cb6be479e5429ee11e31e99e2a590314068b1949c56.json  query-18c88004de44a1184a509ba93c75bc1801b5637bf712848b98de17f5b708c151.json  query-1ccdc9d1d31b682c4d600f86bd0a723f886ad4e86688229e81d72fa5d90e9ad8.json  query-1cd3cc62888491716504dbd921bfa16686d8540256f44e0834a0e2321aafb9cd.json  query-1cd93be215611edd1d5142ece711825fed66e29453ceb7805e29ff21875cf55a.json  query-202581016e7833e75cdc225d2649071c758c081968ec8d76bb8ee620babaaa6f.json  query-22b33d9723bef866f744982aaa8c0388071b8703c1630a149531010df16b8eae.json  (+140 more)
(+67 files in other folders)
