[package]
name = "qalendar-api"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Define the binary explicitly
name = "qalendar-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.3", features = ["macros", "json"] } # Web framework
tokio = { version = "1.44.2", features = ["full"] }           # Async runtime
serde = { version = "1.0.219", features = ["derive"] }       # Serialization/Deserialization
serde_json = "1.0.140"                                      # JSON specific serde handling
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "macros", "chrono", "json", "uuid", "runtime-tokio-rustls"] }
bcrypt = "0.17.0"                                         # Password hashing
validator = { version = "0.20.0", features = ["derive"] } # Input validation
dotenvy = "0.15.7"                                        # Load .env files
jsonwebtoken = "9.3.1"                                      # JWT handling
chrono = { version = "0.4.40", features = ["serde"] }      # Timestamps
tracing = "0.1.41"                                         # Logging framework
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] } # Logging subscriber
uuid = { version = "1.16.0", features = ["v4", "serde"] }    # UUID generation
axum-server = "0.7.2"
tower-http = { version = "0.6.2", features = ["cors", "trace", "auth"] }
http = "1.3.1"
async-trait = "0.1.88"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
regex = "1.11.1"
sqlx-cli = { version = "0.8.5", features = ["rustls"] }
rand = "0.9.1"
lettre = "0.11.15"
rustls = "0.23.26"
urlencoding = "2.1.3"
webpki-roots = "0.26.8"
